--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -17,13 +17,12 @@
 }
 
 
-
-
 .Profile img{
     width: 18%;
     height: 18%;
     clip-path: circle();
 }
+
 
 .Summary{
   margin-top: 10px;
@@ -35,12 +34,16 @@
     margin-bottom: 20px;
     white-space: pre-wrap;
 }
+
 .Skills_icons{
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
 
+}
 
+.Skills_icons li{
+    display: inline;
 }
 
 .Skills_icons img{
@@ -49,7 +52,6 @@
     margin-right: 20px;
 }
 
-
 .Profile{
     display: flex;
     justify-content: flex-start;
@@ -57,8 +59,6 @@
     padding: 30px;
     margin-left: 15px;
 }
-
-
 
 
 .Profile p{
