--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -51,3 +51,17 @@
 .Links img:hover{
     transform: scale(2);
 }
+
+@media screen and (max-width:1050px) {
+    .Contact h2{
+        font-size: 15px;
+    }
+
+  
+
+}
+
+@media screen and (max-width: 700px) {
+    
+
+}
