--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,24 +1,40 @@
 .NavBar{
-
     display: flex;
+    justify-content: space-between;
     align-items: center;
+   
+}
 
+.navbar_menu_item{
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .navbar_links_container
 {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: 50px;
-}
-
-.navbar_links
-{
     display: flex;
     flex-direction: row;
 }
+
+.navbar_menu_container{
+
+    display: flex;
+    flex-direction: column;
+    background:rgb(21, 18, 84); ;
+    padding: 10px;
+    position: absolute;
+    margin-top: 1rem;
+    right: 0;
+    top: 10px;
+    min-width: 150px;
+    z-index: 2;
+    margin-right: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+}
+
 
 .navbar_logo img{
     width: 50px;
@@ -27,7 +43,7 @@
     margin-left: 1rem;
 }
 
-.navbar_links a
+.navbar_links_container a
 {
    
     padding: 10px;
@@ -44,8 +60,64 @@
     
 }
 
-.navbar_links a:hover{
-    text-decoration-line: underline;
+.navbar_links_container a:hover{
+    text-decoration-line: underline;   
+}
+
+.navbar-menu {
+    margin-left: 1rem;
+    display: none;
+    position: relative;
+}
+
+.navbar-menu svg{
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+
+
+@media screen and (max-width:1050px) {
+    .navbar_links_container{
+        display: none;
+    }
+
+    .navbar-menu{
+        display: flex;
+       
+    }
+
+    .navbar_menu_item{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar_menu_item a{
+        padding: 5px;
+        font-weight: bold;
+        color: rgb(150, 146, 228);
+        text-decoration-line: none;
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 15px;
+        margin-top: 20px;
+        font-style: normal;
+       
+    }
+
+    .navbar_menu_item a:hover{
+        text-decoration-line: underline; 
+    }
    
-     
+}
+
+@media screen and (max-width: 700px) {
+    
+}
+
+@media screen and (max-width: 550px) {
+
+
 }
