--- a/src/components/work/Work.css
+++ b/src/components/work/Work.css
@@ -72,4 +72,40 @@
 }
 
 
+@media screen and (max-width:1050px) {
+    .Game h4{
+        font-size: 15px;
+    
+    }
+    .Projects{
+ 
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column
+    }
+
+    .Game{
+        width: 80%;
+        margin-top: 20px;
+      
+    }
+    .Game p{
+       font-size: 12px;
+    
+    }
+
+
+    .Work h1{
+        font-size: 20px;
+    }
+
+
+}
+
+@media screen and (max-width: 700px) {
+    
+
+}
+
+
 
