--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,8 +1,8 @@
 .NavBar{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-   
+    align-items: center; 
+
 }
 
 .navbar_menu_item{
@@ -19,10 +19,9 @@
 }
 
 .navbar_menu_container{
-
     display: flex;
     flex-direction: column;
-    background:rgb(21, 18, 84); ;
+    background:transparent; ;
     padding: 10px;
     position: absolute;
     margin-top: 1rem;
