--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    padding: 10px;
+    margin: 10px
 }
 
 .navbar_links_container
@@ -21,17 +23,16 @@
 .navbar_menu_container{
     display: flex;
     flex-direction: column;
-    background:transparent; ;
-    padding: 10px;
     position: absolute;
     margin-top: 1rem;
     right: 0;
     top: 10px;
-    min-width: 150px;
+    background-color: rgb(9, 9, 64);
     z-index: 2;
     margin-right: 10px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+    content: normal;
 }
 
 
@@ -94,15 +95,21 @@
     }
 
     .navbar_menu_item a{
-        padding: 5px;
+        padding: 10px;
         font-weight: bold;
         color: rgb(150, 146, 228);
         text-decoration-line: none;
         text-transform: capitalize;
         text-align: center;
         font-size: 15px;
-        margin-top: 20px;
+        margin-top: 50px;
         font-style: normal;
+       
+    }
+
+    .navbar_menu_item p{
+        padding: 10px;
+        
        
     }
 
